SFDC Automation/src/objects/Ryder_Branch__c.object
<CustomObject>
    <description>Branches at Ryder</description>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <label>Asset Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Name__c</fullName>
        <label>Asset Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Phone__c</fullName>
        <label>Asset Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Manager_UserId__c</fullName>
        <label>Asset Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <label>Area Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <description>external ID</description>
        <externalId>true</externalId>
        <label>Branch Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBU_Code__c</fullName>
        <label>CBU Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBU_Name__c</fullName>
        <label>CBU Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Captive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication of whether this is a captive shop</description>
        <label>Captive / OnSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Ryder_Branches__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Ryder Branches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Asset_Management_Email__c</fullName>
        <label>Director of Asset Management Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director_of_Asset_Management_Name__c</fullName>
        <label>Director of Asset Management Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Asset_Management_Phone__c</fullName>
        <label>Director of Asset Management Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Director_of_Asset_Management_UserId__c</fullName>
        <label>Director of Asset Management ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Ops_Email__c</fullName>
        <label>Director of Ops Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director_of_Ops_Name__c</fullName>
        <label>Director of Ops Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Ops_Phone__c</fullName>
        <label>Director of Ops Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Director_of_Ops_UserId__c</fullName>
        <label>Director of Ops ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Rental_Email__c</fullName>
        <label>Director of Rental Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director_of_Rental_Name__c</fullName>
        <label>Director of Rental Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Rental_Phone__c</fullName>
        <label>Director of Rental Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Director_of_Rental_UserId__c</fullName>
        <label>Director of Rental ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales_Email__c</fullName>
        <label>Director of Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales_Name__c</fullName>
        <label>Director of Sales Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales_Phone__c</fullName>
        <label>Director of Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Director_of_Sales_UserId__c</fullName>
        <label>Director of Sales ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>District 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finance_Director_Email__c</fullName>
        <label>Finance Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Director_Name__c</fullName>
        <label>Finance Director Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Director_Phone__c</fullName>
        <label>Finance Director Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_Director_UserID__c</fullName>
        <label>Finance Director ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Email__c</fullName>
        <label>Finance Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Name__c</fullName>
        <label>Finance Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Phone__c</fullName>
        <label>Finance Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_UserID__c</fullName>
        <label>Finance Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_VP_Email__c</fullName>
        <label>Finance VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_VP_Name__c</fullName>
        <label>Finance VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_VP_Phone__c</fullName>
        <label>Finance VP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Finance_VP_UserID__c</fullName>
        <label>Finance VP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Director_National_Sales_Name__c</fullName>
        <label>Group Director National Sales Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Director_National_Sales_UserId__c</fullName>
        <label>Group Director National Sales ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_In_360_Date__c</fullName>
        <description>This field will store the date on which the Branch was marked to be included in the Customer 360</description>
        <label>Include In 360 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Include_In_360__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include_In_360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Email__c</fullName>
        <label>Inside_Sales_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Name__c</fullName>
        <label>Inside_Sales_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Phone__c</fullName>
        <label>Inside_Sales_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_UserId__c</fullName>
        <label>Inside_Sales_UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_2_Email__c</fullName>
        <label>Lease Administrator 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_2_Name__c</fullName>
        <label>Lease Administrator 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_2_Phone__c</fullName>
        <label>Lease Administrator 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_2_UserId__c</fullName>
        <label>Lease Administrator 2 ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_Email__c</fullName>
        <label>Lease Administrator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_Name__c</fullName>
        <label>Lease Administrator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_Phone__c</fullName>
        <label>Lease Administrator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Lease_Administrator_UserId__c</fullName>
        <label>Lease Administrator ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Admin_Email__c</fullName>
        <label>License Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>License_Admin_Name__c</fullName>
        <label>License Admin Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Admin_Phone__c</fullName>
        <label>License Admin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>License_Admin_UserId__c</fullName>
        <label>License Admin UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS_Email__c</fullName>
        <description>Manager of Sales Email.</description>
        <label>MOS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MOS_Name__c</fullName>
        <description>Name of  &apos;Manager of Sales&apos;.</description>
        <label>MOS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS_Phone__c</fullName>
        <description>Manager of Sales - Phone Number.</description>
        <label>MOS Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MOS_UserId__c</fullName>
        <description>User Id of &apos;Manager of Sales&apos;.</description>
        <label>MOS UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Manager_Email__c</fullName>
        <label>Maintenance Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Maintenance_Manager_Name__c</fullName>
        <label>Maintenance Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Manager_Phone__c</fullName>
        <label>Maintenance Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Maintenance_Manager_UserId__c</fullName>
        <label>Maintenance Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_For_TimeZone_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Postal Code</label>
        <referenceTo>Postal_Code__c</referenceTo>
        <relationshipLabel>Ryder Branches</relationshipLabel>
        <relationshipName>Ryder_Branche_PostalCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Director_Email__c</fullName>
        <label>Quality Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Director_Name__c</fullName>
        <label>Quality Director Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Director_UserID__c</fullName>
        <label>Quality Director ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_Email__c</fullName>
        <label>Quality Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_Name__c</fullName>
        <label>Quality Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_Phone__c</fullName>
        <label>Quality Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Quality_Manager_UserId__c</fullName>
        <label>Quality Manager Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_VP_Email__c</fullName>
        <label>Quality VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quality_VP_ID__c</fullName>
        <label>Quality VP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_VP_Name__c</fullName>
        <label>Quality VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_VP_Phone__c</fullName>
        <label>Quality VP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rental_Manager_Email__c</fullName>
        <label>Rental Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rental_Manager_Name__c</fullName>
        <label>Rental Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Manager_Phone__c</fullName>
        <label>Rental Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rental_Manager_UserId__c</fullName>
        <label>Rental Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC2_Email__c</fullName>
        <label>SAC2_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAC2_Name__c</fullName>
        <label>SAC2_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC2_Phone__c</fullName>
        <label>SAC2_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAC2_UserId__c</fullName>
        <label>SAC2_UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC_Email__c</fullName>
        <label>SAC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SAC_Name__c</fullName>
        <label>SAC Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAC_Phone__c</fullName>
        <label>SAC Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAC_UserId__c</fullName>
        <label>SAC UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Code__c</fullName>
        <label>Sales Area Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Name__c</fullName>
        <label>Sales Area Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Code__c</fullName>
        <label>Sales Territory Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory_Name__c</fullName>
        <label>Sales Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_All__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to define whether the PDF has to be sent to everyone in the Account Management team or not</description>
        <label>Send To All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senior_VP_Email__c</fullName>
        <label>Senior VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Senior_VP_Name__c</fullName>
        <label>Senior VP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_VP_Phone__c</fullName>
        <label>Senior VP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Senior_VP_UserId__c</fullName>
        <label>Senior VP ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_VP_of_Ops_Email__c</fullName>
        <label>Senior VP of Ops Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Senior_VP_of_Ops_Name__c</fullName>
        <label>Senior VP of Ops Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_VP_of_Ops_Phone__c</fullName>
        <label>Senior VP of Ops Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Senior_VP_of_Ops_UserId__c</fullName>
        <label>Senior VP of Ops ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Email__c</fullName>
        <label>Service Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Name__c</fullName>
        <label>Service Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Manager_Phone__c</fullName>
        <label>Service Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Manager_UserID__c</fullName>
        <label>Service Manager ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Ryder Branch</label>
    <listViews>
        <fullName>All_Ryder_Branches</fullName>
        <columns>NAME</columns>
        <columns>CBU_Name__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Sales_Area_Name__c</columns>
        <columns>Sales_Territory_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Maintenance_Manager_Name__c</columns>
        <columns>Account_Manager_Name__c</columns>
        <columns>Director_of_Ops_Name__c</columns>
        <columns>Director_of_Sales_Name__c</columns>
        <columns>Include_In_360__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Territory_Code__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All Ryder Branches</label>
    </listViews>
    <listViews>
        <fullName>All_Ryder_Branches_MICHIGAN_CBU</fullName>
        <columns>NAME</columns>
        <columns>CBU_Name__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Sales_Area_Name__c</columns>
        <columns>Sales_Territory_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Maintenance_Manager_Name__c</columns>
        <columns>Account_Manager_Name__c</columns>
        <columns>Director_of_Ops_Name__c</columns>
        <columns>Director_of_Sales_Name__c</columns>
        <columns>Include_In_360__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Territory_Code__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CBU_Name__c</field>
            <operation>equals</operation>
            <value>INDY GRND RAPIDS CBU</value>
        </filters>
        <label>All Ryder Branches MICHIGAN CBU</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Captive_Branches</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Branch_Code__c</columns>
        <columns>Account_Manager_Name__c</columns>
        <columns>Area_Name__c</columns>
        <columns>CBU_Name__c</columns>
        <columns>Director_of_Asset_Management_Name__c</columns>
        <columns>Director_of_Ops_Name__c</columns>
        <columns>Maintenance_Manager_Name__c</columns>
        <columns>Rental_Manager_Name__c</columns>
        <columns>Senior_VP_of_Ops_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Captive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Captive Branches</label>
    </listViews>
    <listViews>
        <fullName>Ryder_Branches_by_Branch_Code</fullName>
        <columns>NAME</columns>
        <columns>CBU_Name__c</columns>
        <columns>Area_Name__c</columns>
        <columns>Sales_Area_Name__c</columns>
        <columns>Sales_Territory_Name__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Maintenance_Manager_Name__c</columns>
        <columns>Account_Manager_Name__c</columns>
        <columns>Director_of_Ops_Name__c</columns>
        <columns>Director_of_Sales_Name__c</columns>
        <columns>Include_In_360__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch_Code__c</field>
            <operation>equals</operation>
            <value>91700</value>
        </filters>
        <label>Ryder Branches by Branch Code</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Ryder Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ryder Branches</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>